decision service can now log interview into mongo db

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -18,6 +18,7 @@
 appName=off-payroll-decision
 
 play.modules.enabled += "com.kenshoo.play.metrics.PlayModule"
+play.modules.enabled += "play.modules.reactivemongo.ReactiveMongoModule"
 play.http.requestHandler = "play.api.http.GlobalSettingsHttpRequestHandler"
 
 # Session Timeout
@@ -85,6 +86,11 @@ controllers {
     }
 
   uk.gov.hmrc.decisionservice.controllers.DecisionController = {
+      needsAuth = false
+      needsLogging = false
+      needsAuditing = false
+    }
+  uk.gov.hmrc.decisionservice.controllers.AnalyticsController = {
       needsAuth = false
       needsLogging = false
       needsAuditing = false
