retriev and log interview stats on startup

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -19,6 +19,7 @@ appName=off-payroll-decision
 
 play.modules.enabled += "com.kenshoo.play.metrics.PlayModule"
 play.modules.enabled += "play.modules.reactivemongo.ReactiveMongoModule"
+play.modules.enabled += "uk.gov.hmrc.decisionservice.Module"
 play.http.requestHandler = "play.api.http.GlobalSettingsHttpRequestHandler"
 
 # Session Timeout
@@ -165,4 +166,10 @@ microservice {
         }
 
     }
+
+}
+
+analytics {
+    reportingPeriod = 2
+    gatherAnalytics = true
 }
