--- a/conf/application.conf
+++ b/conf/application.conf
@@ -35,6 +35,9 @@ play.modules.enabled += "uk.gov.hmrc.play.bootstrap.graphite.GraphiteMetricsModu
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.MicroserviceModule"
 play.http.filters = "uk.gov.hmrc.play.bootstrap.filters.MicroserviceFilters"
 
+# Json error handler
+play.http.errorHandler = "uk.gov.hmrc.play.bootstrap.http.JsonErrorHandler"
+
 # Secret key
 # ~~~~~
 # The secret key is used to secure cryptographics functions.
