change routes and app name

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -15,7 +15,7 @@
 # This is the main configuration file for the application.
 # ~~~~~
 
-appName=off-payroll-decision
+appName=cest-decision
 
 # An ApplicationLoader that uses Guice to bootstrap the application.
 play.application.loader = "uk.gov.hmrc.play.bootstrap.ApplicationLoader"
@@ -150,8 +150,8 @@ auditing {
 }
 
 
-mongodb.uri = "mongodb://localhost:27017/off-payroll-decision"
-Prod.mongodb.uri = "mongodb://localhost:27017/off-payroll-decision"
+mongodb.uri = "mongodb://localhost:27017/cest-decision"
+Prod.mongodb.uri = "mongodb://localhost:27017/cest-decision"
 
 
 microservice {
