--- a/conf/application.conf
+++ b/conf/application.conf
@@ -149,7 +149,10 @@ auditing {
     }
 }
 
-mongodb.uri = "mongodb://localhost:27017/cest-decision?rm.monitorRefreshMS=4000&rm.failover=default"
+mongodb = {
+    uri = "mongodb://localhost:27017/cest-decision?rm.monitorRefreshMS=4000&rm.failover=default"
+    timeToLiveInHours = 300
+}
 
 microservice {
     metrics {
