--- a/conf/application.conf
+++ b/conf/application.conf
@@ -151,7 +151,8 @@ auditing {
 
 mongodb = {
     uri = "mongodb://localhost:27017/cest-decision?rm.monitorRefreshMS=4000&rm.failover=default"
-    timeToLiveInHours = 30
+    //6 months
+    timeToLiveInHours = 4380
 }
 
 microservice {
