--- a/conf/application.conf
+++ b/conf/application.conf
@@ -16,6 +16,7 @@
 # ~~~~~
 
 appName=cest-decision
+include "backend.conf"
 
 # An ApplicationLoader that uses Guice to bootstrap the application.
 play.application.loader = "uk.gov.hmrc.play.bootstrap.ApplicationLoader"
