adding cors support

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -135,12 +135,15 @@ microservice {
     }
 
     services {
-
         auth {
             host=localhost
             port=8500
         }
-
     }
+}
 
+play.filters.enabled += "play.filters.cors.CORSFilter"
+play.filters.cors {
+  allowedHttpMethods = ["GET", "HEAD", "POST"]
+  allowedHttpHeaders = ["Accept", "Content-Type", "DNT", "User-Agent", "Referer"]
 }
